[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Brooke Chalmers <breq@breq.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.18.0"
psycopg2-binary = "^2.9.1"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.2.1"
Flask-Migrate = "^3.0.1"
sendgrid = "^6.7.1"
requests = "^2.25.1"
gunicorn = "^20.1.0"
minio = "^7.1.0"
snowcloud = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
